gccida/c0/find_placeholder
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6404:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // [rsp+8h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6406:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // [rsp+18h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6410:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *need_type; // [rsp+30h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6447:21: error: expected expression
imag = ( tree_node *)low; 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6447:10: error: use of undeclared identifier 'tree_node'
imag = ( tree_node *)low; 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6480:19: error: expected expression
v4 = ( tree_node *)v3; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/expr.c:6480:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)v3; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_placeholder/src/obj/expr.o] Error 1
